--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This project implements the algorithm found in Scott Draves paper available at http://flam3.com/flame.pdf.
+This project implements the algorithm found in Scott Draves' paper available at http://flam3.com/flame.pdf.
